--- a/package.json
+++ b/package.json
@@ -6,9 +6,14 @@
     "author": "Grant Galitz <grantgalitz@gmail.com>",
     "contributors": [
         "jsemu2 (https://github.com/jsemu2)",
-        "Dmitry <dmitry@cojam.ru> (https://e965.ru)"
+        "Dmitry <dmitry@cojam.ru> (https://e965.ru)",
+        "bbbbbr (https://github.com/bbbbbr)"
     ],
+    "homepage": "http://cojamru.github.io/gba/",
     "license": "MIT",
+    "bugs": {
+        "url": "https://github.com/cojamru/gba/issues"
+    },
     "scripts": {
         "prettier": "prettier --write **/*.{html,json,js,css}",
         "lint-staged": "lint-staged"
@@ -23,10 +28,6 @@
             "pre-commit": "npm run lint-staged"
         }
     },
-    "bugs": {
-        "url": "https://github.com/cojamru/gba/issues"
-    },
-    "homepage": "http://cojamru.github.io/gba/",
     "devDependencies": {
         "husky": "^4.2.5",
         "lint-staged": "^10.2.2",
