change graveblood rom domain

--- a/games_config.json
+++ b/games_config.json
@@ -4,7 +4,7 @@
         {
             "key": "graveblood",
             "title": "Graveblood (demo)",
-            "path": "https://e965.ru/graveblood/graveblood.gba"
+            "path": "https://blyat.science/graveblood/graveblood.gba"
         },
         {
             "key": "advancewars",
